--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -40,13 +40,32 @@
 
 #header #logo {
     align-self: center;
+    transition: all 300ms;
 }
 
-#logo img{
+#logo img {
     width: 50px;
     height: 50px;
     border-radius: 100%;
 }
+
+#logo img:hover {
+    animation: fromBellow 500ms linear;
+}
+
+
+@keyframes fromBellow{
+	0%{
+		transform: translateY(0%);
+	}
+	50%{
+		transform: translateY(20%);
+	}
+	100%{
+		transform: translateY(0%);
+	}
+}
+
 
 #header #nav {
     text-align: center;
@@ -160,12 +179,43 @@
 }
 
 .content button, input[type="submit"], #skills button {
-    background-color: skyblue;
-    border: 1px inherit blue;
+    background-color: rgb(255, 255, 255);
+    border: 1px inherit #00538c;
     padding: 10px 20px;
     margin-top: 10px;
     margin-bottom: 10px;
     max-width: 200px;
+    transition: all 1s;
+    color: #00538c;
+}
+
+button:hover,
+input[type="submit"]:hover,
+.content button:hover,
+#skills button:hover {
+	border-radius: 50px;
+	box-shadow: 0px 0px 10px gray;
+	background-color: #242426;
+    color: #ffffff;
+	animation: bling 10s infinite linear;
+}
+
+@keyframes bling{
+	0%{
+		border: 5px solid lightblue;
+	}
+	25%{
+		border: 5px solid green;
+	}
+	50%{
+		border: 5px solid yellow;
+	}
+	75%{
+		border: 5px solid blue;
+	}
+	100%{
+		border: 5px solid lightblue;
+	}
 }
 
 #layout #skills {
