--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
 
+$fuente: 'Roboto', sans-serif;
+$color-borde: #B1BDC5;
+
+$estilos:(
+    color: #FFFFFF,
+    sizeFuente: 18px,
+    hover: #4F4953
+);
+
+%bordes {
+    border-top: 5px outset $color-borde;
+    border-bottom: 5px outset $color-borde;
+}
+
+@mixin sizeImages($width, $height) {
+    width: $width;
+    height: $height;
+}
+
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: $fuente;
     margin: 0px;
     padding: 0px;
 }
@@ -12,8 +31,7 @@
     transition: all 300ms;
 
     img {
-        width: 50px;
-        height: 50px;
+        @include sizeImages(50px,50px);
         border-radius: 100%;
 
         &:hover {
@@ -38,7 +56,7 @@ nav ul li {
     padding: 5px;
 
     &:hover {
-        background-color: #4F4953;
+        background-color: map-get($map: $estilos, $key: hover);
     }
 
     a {   
@@ -50,7 +68,7 @@ nav ul li {
 }
 
 .navbar-toggler-icon {
-    color: #FFFFFF;
+    color: map-get($map: $estilos , $key: color)
 }
 
 header #social-media {
@@ -60,7 +78,7 @@ header #social-media {
 /* INDEX PAGE */
 #main {
     margin-bottom: 0px;
-    background-color: #FFFFFF;
+    background-color: map-get($map: $estilos , $key: color);
 
     .content {
 
@@ -71,7 +89,7 @@ header #social-media {
         }
 
         p {
-            font-size: 18px;
+            font-size: map-get($map: $estilos, $key: sizeFuente);
             color: #757575;
             line-height: 1.3;
             font-weight: 300;
@@ -79,34 +97,30 @@ header #social-media {
         }
 
         img {
-            width: 300px;
-            height: 150px;
+            @include sizeImages(300px,150px);
+
         }
     }
 
     .main-image img {
-        width: 300px;
-        height: 300px;
+        @include sizeImages(300px,300px);
         display: block;
         margin: 0 auto;
     }
 }
 
 #experience {
-    border-top: 5px outset #B1BDC5;
-    border-bottom: 5px outset #B1BDC5;
-    background-color: #FFFFFF;
+    @extend %bordes;
+    background-color: map-get($map: $estilos , $key: color);
 
     .content{
-
         p {
             display: none;
         }
     }
 
     .carrousel img {
-        width: 100%;
-        height: 300px;
+        @include sizeImages(100%,300px);
     }
 }
 
@@ -118,13 +132,12 @@ header #social-media {
     margin-bottom: 10px;
     max-width: 200px;
     transition: all 1s;
-    color: #00538c;
 
     &:hover {
         border-radius: 50px;
         box-shadow: 0px 0px 10px gray;
         background-color: #242426;
-        color: #ffffff;
+        color: map-get($map: $estilos , $key: color);
         animation: bling 10s infinite linear;
     }
 }
@@ -150,7 +163,7 @@ header #social-media {
 #skills {
     border-top: 5px inset #628281;
     border-bottom: 5px inset #628281;
-    background-color: #FFFFFF;
+    background-color: map-get($map: $estilos , $key: color);
     
     .content {
 
@@ -170,9 +183,9 @@ header #social-media {
 
 
 #contact {
-    border-top: 5px inset #B1BDC5;
-    border-bottom: 5px inset #B1BDC5;
-    background-color: #FFFFFF;
+    border-top: 5px inset $color-borde;
+    border-bottom: 5px inset $color-borde;
+    background-color: map-get($map: $estilos , $key: color);
 
     #location iframe {
         display: none;
@@ -194,17 +207,209 @@ footer {
     }
 }
 
+/* ------------------------ */ 
+
+
+/* BLOG PAGE */
+#main-blog {
+
+    article {
+        height: auto;
+        border: 1px solid #ccc;
+        margin: 40px auto;
+        padding: 10px;
+        background: white;
+        color: black;
+        box-shadow: 1px 1px 2px #ddd;
+
+        img {
+            @include sizeImages(100%,400px);
+        }
+
+        .data {
+            width: 40%;
+            align-self: flex-end;
+            background: #393d3f;
+            color: white;
+            line-height: 30px;
+            padding: 4px;
+            font-size: 13px;
+            border-radius: 0px 0px 0px 5px;
+
+            @media screen and (min-width: 768px) {
+                    width: 22%;
+            }
+
+            span {
+                padding: 6px;
+            }
+        }
+
+        h4 {
+            font-size: 23px;
+            margin: 3px
+
+            a {
+                text-decoration: none;
+                color: #393d3f;
+            }
+
+            a:hover {
+                text-decoration: underline;
+            }
+        }
+
+        p {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            font-size: 15px;
+        }
+
+        @media screen and (min-width: 768px) {
+            width: 70%;
+        }
+    }
+}
+
+/* -------------- */
+
+/* EXPERIENCE PAGE */
+#main-experience {
+    @extend %bordes;
+    background-color: map-get($map: $estilos , $key: color);
+
+    .card {
+        margin: 20px;
+        height: auto;
+        padding: 20px;
+        align-items: center;
+        text-align: center;
+        background-color: rgb(248, 248, 248);
+        box-shadow: rgba(0, 0, 0, 0.103) 0px 5px 10px;
+        border-radius: 10px;
+
+        img {
+            @include sizeImages(100px,100px);
+        }
+
+        p {
+            font-size: 12px;
+            padding: 10px;
+            line-height: 1.8;
+            font-weight: 100;
+        }
+    }
+}
+
+#resume {
+    @extend %bordes;
+    background-color: map-get($map: $estilos , $key: color);
+
+    p {
+        font-size: 14px;
+        color: #333333;
+        margin: 10px;
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+        @include sizeImages(100%,auto);
+    }
+}
+
+/* -------------- */
+
+/* PORTFOLIO PAGE */
+#main-portfolio {
+    @extend %bordes;
+    background-color: map-get($map: $estilos , $key: color);
+
+    .skill-card {
+        margin: 10px;
+        border: 2px inset #2c292c;
+
+        img {
+            @include sizeImages(80px,80px);
+        }
+    }
+}
+
+#projects {
+    width: 100%;
+    @extend %bordes;
+    background-color: map-get($map: $estilos , $key: color);
+
+    img {
+        @include sizeImages(144px,144px);
+        margin: 2px;
+    }
+}
+/* -------------- */
+
+/* CONTACT PAGE */
+#main-contact {
+    @extend %bordes;
+    background-color: map-get($map: $estilos , $key: color);
+    text-align: center;
+
+    .content .media-link {
+        margin: 15px;
+
+        a img{
+            @include sizeImages(50px,50px);
+            background-color: #242426;
+            border-radius: 10%;
+        }
+    }
+}
+
+#contact-me {
+    @extend %bordes;
+    background-color: map-get($map: $estilos , $key: color);
+    text-align: center;
+
+    h2 {
+        font-size: 22px;
+        margin-bottom: 10px;
+    }
+
+    form {
+        input,
+        textarea {
+            width: 85%;
+            padding: 10px;
+            outline: 1px solid #393d3f;
+
+            &:focus {
+                outline: none;
+                border: 2px solid #04a75b;
+                color: map-get($map: $estilos, $key: hover);
+                font-weight: 200;
+            }
+        }
+
+        label {
+            font-size: map-get($map: $estilos, $key: sizeFuente);
+            color: #393d3f
+        }
+
+        input {
+            padding: 10px;
+        }
+    }
+}
+/* -------------- */
+
 @media screen and (min-width: 1024px) {
 
     header {
-        grid-area: header;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-around;
 
         #logo img{
-            width: 90px;
-            height: 90px;
+            @include sizeImages(90px,90px);
         }
 
         nav ul li {
@@ -228,26 +433,22 @@ footer {
             }
 
             a img {
-                width: 50px;
-                height: 50px;
+                @include sizeImages(50px,50px);
             }
         }
     }
 
     /* INDEX PAGE */
     .content img{
-        width: 400px;
-        height: 200px;
+        @include sizeImages(400px,200px);
     }
 
     .main-image img {
-        width: 500px;
-        height: 500px;
+        @include sizeImages(500px,500px);
     }
 
     .carrousel img {
-        width: 450px;
-        height: 300px;
+        @include sizeImages(450px,300px);
     }
 
     #experience .content p {
@@ -280,5 +481,47 @@ footer {
             display:  block;
         }
     }
+    /* ------------------------ */
 
+    /* BLOG PAGE */
+    article {
+        .data {
+            width: 25%;
+        }
+    }
+
+    /* PORTFOLIO PAGE */
+    .skill-card {
+        img {
+            @include sizeImages(150px,150px);
+        }
+    }
+
+    #projects {
+        img {
+            @include sizeImages(300px,300px);
+        }
+    }
+
+    /* CONTACT PAGE */
+    #contact-me {
+        h2 {
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
+
+        form {
+            input,
+            textarea {
+                width: 85%;
+                padding: 10px;
+                outline: 1px solid #393d3f;
+            }
+            
+            label {
+                font-size: map-get($map: $estilos, $key: sizeFuente);
+                color: #393d3f
+            }
+        }
+    }
 }
