--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -459,14 +459,17 @@ footer {
         display: block;
     }
 
-    #location iframe {
-        display: block;
-        width: 100%;
-        height: 400px;
-        margin-top: 10px;
-        border-radius: 5px;
-        border: 5px solid white;
-        box-shadow: 0px 0px 5px gray;
+    
+    #contact {
+        #location iframe {
+            display: block;
+            width: 100%;
+            height: 400px;
+            margin-top: 10px;
+            border-radius: 5px;
+            border: 5px solid white;
+            box-shadow: 0px 0px 5px gray;
+        }
     }
 
     /* FOOTER */
