--- a/styles/main.css
+++ b/styles/main.css
@@ -300,7 +300,7 @@ footer {
     display: block; }
   #skills .content img {
     display: block; }
-  #location iframe {
+  #contact #location iframe {
     display: block;
     width: 100%;
     height: 400px;
